--- a/style.css
+++ b/style.css
@@ -1,14 +1,52 @@
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
+
+.nav-bar{
+    width: 100%;
+    min-height: 79px;
+    display: flex;
+    background-image: linear-gradient( 45deg, #FC8F49,tomato);
+    position: fixed;
+    z-index: 6;
+    
+}
+
+.logo{
+    padding-left: 13%;
+    margin-top: 1%;
+    width: 25%;
+}
+
+.logo a{
+    text-decoration: none;
+    color: rgb(253, 253, 253);
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.nav-menu{
+    padding-left: 13%;
+    margin-top: 2%;
+    width: 50%; 
+}
+
+.nav-menu a{
+    text-decoration: none;
+    color:rgb(255, 255, 255);
+    margin-right: 5%;
+    font-size: 16px;
+    font-weight: 600;
+}
+
 .tomato{
     color: #FC8F49;
 }
 h1{
     margin-top: 121px;
-    font-size: 71px;
-    font-weight: 900;
+    font-size: 60px;
+    font-weight:bold;
 }
 .ancor-button{
     text-decoration: none;
@@ -16,16 +54,19 @@ h1{
     padding: 20px 46px;
     border-radius: 36px;
     color: white;
-    font-size: 17px;
+    font-size: 18px;
     box-shadow: 10px 10px 40px rgb(247 168 168);
+   font-weight: 800;
 }
 
 .section-top-food{
     display: flex;
+   
 }
 .header-top-div{
     width: 50%;
     padding-left: 5%;
+    z-index: 1;
     
 }
 .top-female{
@@ -33,10 +74,11 @@ h1{
 }
 
 .header-p{
-    font-size: 21px;
-    font-weight: 500;
-    color: #757272;
+    font-size: 20px;
+    color: #575757;
     margin-bottom: 66px;
+    line-height: 160%;
+    letter-spacing:-2% ;
 }
 
 .about-me{
@@ -54,19 +96,20 @@ h1{
     top: 65px;
     display: block;
     margin-left: 34%;
-  
 }
 
 #aboutme-food{
     width: 100%;
 }
 
-h2{
-    font-size: 34px;
-    font-weight: 900;
+h3{
+    font-size: 40px;
+    font-weight:bold;
     color: #707070;
-    margin-top: 180px;
-    
+    line-height: 54px;  
+}
+.aboutme-h3{
+    margin-top: 140px;
 }
 
 .aboutme-contant{
@@ -77,4 +120,138 @@ h2{
 .aboutme-contant p{ 
     line-height: 2;
     margin-bottom: 66px;
+    color: #18191F;
 }
+.item-h3{
+   
+    margin-top: 68px;
+    text-align: center;
+
+}
+.item p{
+    text-align: center;
+}
+.item-div{
+   
+    display: flex;
+    padding-left: 2.5%;
+margin-top: 35px;
+    
+}
+
+.div{
+    width: 29.33%;
+    box-shadow: 10px 10px 30px rgb(184, 183, 183);
+    min-height: 550px;
+    margin-left: 2%;
+    margin-right: 1%;
+    border-radius: 25px;
+}
+
+.div img{
+    width: 90%;
+    margin-top: 4%;
+    margin-left: 5%;
+}
+
+h4{
+    margin-left: 6%;
+    font-size: 28px;
+    font-weight: bold;
+    color: black;
+}
+
+.div p{
+    margin-left: 6%;
+    text-align: left;
+    margin-right: 3% ;
+}
+
+.social-section{
+    border: 2px solids;
+    width: 87%;
+    min-height: 226px ;
+    margin-top: 8%;
+    margin-left: 5%;
+    display: flex;
+    padding-left: 4%;
+    margin-right: 4%;
+    box-shadow: 10px 10px 30px rgb(216 215 215);
+    border-radius: 25px;
+}
+
+h2{
+font-size: 58PX;
+font-size: 58PX;
+margin-block-end: 0;
+}
+
+.subscribers{
+    padding-left: 13%;
+    margin-top: 3%;
+}
+
+
+
+.contact-us{
+    border: 2px solids;
+    width: 50%;
+    min-height: 580px ;
+    margin-top: 8%;
+    margin-left: 25%;
+    box-shadow: 10px 10px 30px rgb(216 215 215);
+    border-radius: 25px;
+}
+
+.contact-us h2{
+    margin-left: 33%;
+}
+
+.contact-form{
+    width: 90%;
+    margin-left: 4%;
+ 
+
+}
+
+input[type=text], input[type=number], textarea {
+    width: 90%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  input[type=text]:focus, input[type=number]:focus, textarea :focus {
+    background-color: #ddd;
+    outline: none;
+  }
+  
+  input[type=submit] {
+    background-color: tomato;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .footer{
+      margin-top: 5%;
+      min-height: 200px;
+      width: 100%;
+      background-color: #0B0D17;
+  }
+
+    h5{
+         color: #5B5B5B;
+         font-size: 28px;
+         text-align: center;
+         padding-top: 3%;  
+    }
+
+    .footer p{
+        color: rgb(165, 163, 163);
+        text-align: center;
+    }
